--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,28 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <main.class>testing.MyClass</main.class>
+    <github-user>shenavaa</github-user>
+    <github-repo>testing</github-repo>
   </properties>
+
+  <scm>
+    <connection>scm:git:https://github.com/${github-user}/${github-repo}.git</connection>
+    <developerConnection>scm:git:git@github.com:${github-user}/${github-repo}.git</developerConnection>
+    <url>https://github.com/${github-user}/${github-repo}</url>
+    <tag>HEAD</tag>
+  </scm>
 
   <build>
             <plugins>
+                <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-release-plugin</artifactId>
+                  <version>3.0.0-M4</version>
+                  <configuration>
+                    <scmCommentPrefix>[ci skip]</scmCommentPrefix>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
+                  </configuration>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
