--- a/pom.xml
+++ b/pom.xml
@@ -18,16 +18,9 @@
     <repository>
       <id>shenavaa.repo</id>
       <name>My github repo</name>
-      <url>https://maven.pkg.github.com/${github-user}/${github-repo}.git</url>
+      <url>https://maven.pkg.github.com/${github-user}/${github-repo}</url>
     </repository>
   </distributionManagement>
-
-  <scm>
-    <connection>scm:git:https://github.com/${github-user}/${github-repo}.git</connection>
-    <developerConnection>scm:git:git@github.com:${github-user}/${github-repo}.git</developerConnection>
-    <url>https://github.com/${github-user}/${github-repo}</url>
-    <tag>HEAD</tag>
-  </scm>
 
   <build>
             <plugins>
@@ -35,10 +28,6 @@
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-release-plugin</artifactId>
                   <version>3.0.0-M4</version>
-                  <configuration>
-                    <scmCommentPrefix>[ci skip]</scmCommentPrefix>
-                    <tagNameFormat>@{project.version}</tagNameFormat>
-                  </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
